# multi-agent-healthcare-triage

./: .env.example  .gitignore  README.md  instructions_final_assignment.md  pyproject.toml
data/: cases.json  clinic.json  esi.json  red_flags.json
evals/: cases.jsonl  report.md  run_evals.py
evidence/: emergence-demo.md
evidence/dispositions/: capacity_conflict-governed.json  chest_pain_acs-governed.json  missing_info-governed.json  prompt_injection-governed.json  uri_selfcare-governed.json
evidence/eval-runs/: case-abdominal_ambiguous.json  case-abuse_out_of_scope.json  case-anaphylaxis.json  case-capacity_conflict.json  case-chest_pain_acs.json  case-mental_health_si.json  case-minor_laceration.json  case-missing_info.json  case-pediatric_fever.json  case-prompt_injection.json  case-stroke_fast.json  case-undertriage_trap.json  case-uri_selfcare.json  eval-report.json
evidence/transcripts/: demo-undertriage_trap-governed-trace_1d032f7f1ebf456e8f943a3ba21f6943.json  demo-undertriage_trap-naive-trace_24be4edd251a49468a5fb6ecdf031eef.json  run-abuse_out_of_scope-governed-trace_03048fa646054851bb40c55c225d46fb.json  run-capacity_conflict-governed-trace_13dce8ab18884d89b5d0e195b4fce14e.json  run-chest_pain_acs-governed-trace_62512274fe0341f18a584e2628198643.json  run-missing_info-governed-trace_ef5869860a714a48b27e29dce488b1bb.json  run-prompt_injection-governed-trace_699b33f45df541ff9e165a116b014931.json  (+1 more)
report/: report.tex
src/triage_mas/: __init__.py  (+12 more)
tests/: test_agents.py  test_fixtures.py  test_guardrails.py  test_schemas.py  test_triage_logic.py
