[project]
name = "triage-mas"
version = "0.1.0"
description = "A small but credible multi-agent healthcare-triage system (capstone, Assignment 3) built on the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents",
    "pydantic>=2",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
triage = "triage_mas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage_mas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
